# odmn-static

./: .gitignore  .rtx.toml  fly.toml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
static/css/: main.css
templates/: index.html
