[tool.poetry]
name = "odmn-static"
version = "1.0.0"
description = ""
authors = ["C. R. Oldham <cro@ncbt.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
